@@ -65,4 +65,7 @@ public interface TokenSource {
 
 	/** Optional method that lets users set factory in lexer or other source */
 	public void setTokenFactory(TokenFactory<?> factory);
+
+	/** Gets the factory used for constructing tokens. */
+	public TokenFactory<?> getTokenFactory();
 }
