@@ -1,7 +1,6 @@
 import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CommonToken;
 import org.antlr.v4.runtime.CommonTokenFactory;
-import org.antlr.v4.runtime.Token;
 import org.antlr.v4.runtime.TokenStream;
 import org.antlr.v4.runtime.UnbufferedCharStream;
 import org.antlr.v4.runtime.UnbufferedTokenStream;
@@ -25,11 +24,11 @@ public class TestCSV {
 		TokenStream tokens = new UnbufferedTokenStream<CommonToken>(lex);
 		CSVParser parser = new CSVParser(tokens);
 		parser.setBuildParseTree(false);
-//		parser.file();
-		Token t = tokens.LT(1);
-		while ( t.getType()!=-1 ) {
-			tokens.consume();
-			t = tokens.LT(1);
-		}
+		parser.file();
+//		Token t = tokens.LT(1);
+//		while ( t.getType()!=-1 ) {
+//			tokens.consume();
+//			t = tokens.LT(1);
+//		}
 	}
 }
