@@ -2,6 +2,13 @@ ANTLR v4 Honey Badger
 
 October ?, 2012 -- 4.0b2 release
 
+September 30, 2012
+
+* Fixed the unbuffered streams, which actually buffered everything
+  up by mistake. tweaked a few comments.
+
+* Added a getter to IntStream for the token factory
+
 September 29, 2012
 
 * no nongreedy or wildcard in parser.
